k8s/Employers/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employers
  template:
    metadata:
      labels:
        app: employers
    spec:
      containers:
        - image: decel337/employers
          imagePullPolicy: Never
          name: employers
          ports:
            - containerPort: 8080
