k8s/Employers/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employers-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: employers
