k8s/Employers/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employers-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/employers
            pathType: "Prefix"
            backend:
              service:
                name: employers-service
                port:
                  number: 80
